add navbar,h1, h2, h3 and p

--- a/.html
+++ b/.html
@@ -19,26 +19,42 @@
         </ul>
     </nav>
     <section id="welcome-section" class="welcome-section">
-      <h1>Hi, It's Walwala Safi</h1>
-      <p>I'm a Web Designer</p>
-      <img src="images/images.jpg">
+      <h1>Hi, It's <span>Walwala Safi</span></h1>
+      <h3>I'm a<span>Web Developer</span></h3>
+      <p>It serves as a visual resume, highlighting My skills, 
+        creativity, and proficiency in crafting compelling digital 
+        solutions. Through my portfolio, i demonstrate my ability to
+        design visuallyappealing websites and graphics, as well as 
+        my proficiency in variousprogramming languages, 
+        design tools, and techniques.</p>
     </section>
+    <div id="body-img" class="body-img">
+      <img src="images/images.jpg">
+    </div>
     <section id="projects" class="projects">
+      <h2>projects</h2>
       <div class="projects-grid">
         <a href="">
           <img src="images/survey.jpg" alt="Survey-form" class="project-img"/>
-          <p class="project-title">Survey-form</p>
+          <p class="project-tile">Survey-form</p>
         </a> 
         <a href="">
           <img src="images/product-landing-page.jpg" alt="product-landing-page" class="project-img"/>
-          <p class="project-title">product-landing-page</p>
+          <p class="project-tile">product-landing-page</p>
         </a>
         <a href="">
           <img src="images/Screenshot.jpg" alt="Technical-document" class="project-img"/>
-          <p class="project-title">Technical-document</p>
+          <p class="project-tile">Technical-document</p>
         </a>
       </div>
     </section>
-    <section id="Contact" class="Contact"></section>
+    <section id="Contact" class="Contact">
+      <div id="contact-header"></div>
+      <h2>let's work together...</h2>
+      <p>Contact me </p>
+      <div id="contact-links">
+        <a href="" id="profile-link" target="_blank">GitHub</a>
+      </div>
+    </section>
 </body>
 </html>
