--- a/.html
+++ b/.html
@@ -29,7 +29,7 @@
         design tools, and techniques.</p>
     </section>
     <div id="body-img" class="body-img">
-      <img src="images/images.jpg">
+      <img src="images/images.jpg" alt="">
     </div>
     <section id="projects" class="projects">
       <h2>projects</h2>
