--- a/.html
+++ b/.html
@@ -9,52 +9,74 @@
 <body>
     <nav id="navbar">
         <ul id="nav-list">
-          <li>
-            <a href="#welcome-section">About</a>
-          </li><li>
-            <a href="#projects">Work</a>
-          </li><li>
-            <a href="#Contact">contact</a>
-          </li>
+            <li>
+                <a href="#welcome-section">About</a>
+            </li>
+            <li>
+                <a href="#projects">Work</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
         </ul>
     </nav>
     <section id="welcome-section" class="welcome-section">
-      <h1>Hi, It's <span>Walwala Safi</span></h1>
-      <h3>I'm a<span>Web Developer</span></h3>
-      <p>It serves as a visual resume, highlighting My skills, 
-        creativity, and proficiency in crafting compelling digital 
-        solutions. Through my portfolio, i demonstrate my ability to
-        design visuallyappealing websites and graphics, as well as 
-        my proficiency in variousprogramming languages, 
-        design tools, and techniques.</p>
+        <div class="wrapper">
+            <div class="image">
+                <img src="images/images.jpg" alt="Profile Picture">
+                <div class="content">
+                    <h1>Hi, It's <span>Walwala Safi</span></h1>
+                    <h3>I'm a <span>Web Developer</span></h3>
+                    <p>It serves as a visual resume, highlighting My skills,
+                        creativity, and proficiency in crafting compelling digital
+                        solutions. Through my portfolio, i demonstrate my ability to
+                        design visually appealing websites and graphics, as well as
+                        my proficiency in various programming languages,
+                        design tools, and techniques.</p>
+                </div>
+            </div>
+        </div>
     </section>
-    <div id="body-img" class="body-img">
-      <img src="images/images.jpg" alt="">
-    </div>
     <section id="projects" class="projects">
-      <h2>projects</h2>
-      <div class="projects-grid">
-        <a href="">
-          <img src="images/survey.jpg" alt="Survey-form" class="project-img"/>
-          <p class="project-tile">Survey-form</p>
-        </a> 
-        <a href="">
-          <img src="images/product-landing-page.jpg" alt="product-landing-page" class="project-img"/>
-          <p class="project-tile">product-landing-page</p>
-        </a>
-        <a href="">
-          <img src="images/Screenshot.jpg" alt="Technical-document" class="project-img"/>
-          <p class="project-tile">Technical-document</p>
-        </a>
-      </div>
+        <h2>Projects</h2>
+        <div class="projects-grid">
+            <a href="#">
+                <img src="images/survey.jpg" alt="Survey Form" class="project-img"/>
+                <p class="project-tile">Survey Form</p>
+            </a>
+            <a href="#">
+                <img src="images/product-landing-page.jpg" alt="Product Landing Page" class="project-img"/>
+                <p class="project-tile">Product Landing Page</p>
+            </a>
+            <a href="#">
+                <img src="images/Screenshot.jpg" alt="Technical Document" class="project-img"/>
+                <p class="project-tile">Technical Document</p>
+            </a>
+        </div>
     </section>
-    <section id="Contact" class="Contact">
-      <div id="contact-header"></div>
-      <h2>let's work together...</h2>
-      <p>Contact me </p>
-      <div id="contact-links">
-        <a href="" id="profile-link" target="_blank">GitHub</a>
-      </div>
+    <section id="contact" class="contact">
+        <h2>Contact me 📞📱</h2>
+        <form action="">
+            <div class="input-group">
+                <div class="input-box">
+                    <label for="fullName">Full Name:</label>
+                    <input type="text" id="fullName" placeholder="Full Name">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" placeholder="Email">
+                </div>
+                <div class="input-box">
+                    <label for="phoneNumber">Phone Number:</label>
+                    <input type="tel" id="phoneNumber" placeholder="Phone number">
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" placeholder="Subject">
+                </div>
+            </div>
+            <div class="input-group-2">
+                <label for="message">Message:</label>
+                <textarea id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+            </div>
+        </form>
     </section>
 </body>
 </html>
