--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>personal-portfolio-webpage</title>
     <link rel="stylesheet" href="styles.css"/>
+    <a id="profile-link" href="url_to_your_profile" target="_blank">Link Text</a>
 </head>
 <body>
     <nav id="navbar">
